Sun Nov 10 21:29:03 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkcheckbutton.c (gtk_real_check_button_draw_indicator): 
	* gtk/gtkradiobutton.c (gtk_radio_button_draw_indicator)

	Make sure check and option marks are drawn insensitive when the
	widgets are insensitive.

	(#92548, patch from Tim Evans)

Sun Nov 10 21:25:04 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.h (struct _GtkWidgetClass): Remove _gtk_reserved8
	to restore binary compatibility.

2002-11-10  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkwindow-x11.c (_gdk_moveresize_handle_event): Fix a
	typo which broke moveresize emulation.

Sat Nov  9 14:42:53 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_button_*): Block
	button presses/releases over the scroll arrows
	to avoid popping down the menu. (#73444, Ettore Perazzoli)

	* gtk/gtkmenu.c (gtk_menu_enter_notify): Obey the
	ignore_enter flag for scrolling as well.

	* gtk/gtkmenu.c (gtk_menu_stop_scrolling): Clear
	the upper_arrow_prelight, lower_arrow_prelight 
	flags.

	* gtk/gtkmenu.c: Tweak the scroll speeds,
	timeouts, and fast-scroll area to make things
	zippier. (#73445, Ettore Perazzoli)

2002-11-09  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtkwidget.c (gtk_widget_class_init): Use the correct
	struct offset for the screen_changed signal.

Fri Nov  8 19:07:39 2002  Owen Taylor  <otaylor@redhat.com>

	* demos/Makefile.am (test-inline-pixbufs.h): Depend
	on gdk-pixbuf.loaders as well as gdk-pixbuf.csource.
	(#97096, Jeff Waugh)

2002-11-09  Matthias Clasen  <maclas@gmx.de>

	* tests/testgtk.c (create_resize_grips): Draw grips in all edges.

	* gdk/x11/gdkfont-x11.c (gdk_text_extents_wc): 
	(gdk_text_extents): 
	* gdk/gdkfont.c (gdk_string_extents): Reformulate doc comments to
	work around gtk-doc limitations.

Fri Nov  8 18:04:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/{linux-fb,win32,11}/Makefile.am: Add in a awful
	hack to force gdkenumtypes.h to be updated before